fixes flex style on IE10

--- a/template/less/app.less
+++ b/template/less/app.less
@@ -10,7 +10,7 @@
 }
 
 .amp-main {
-  flex: 1;
+  flex: 1 0 auto;
   padding-top: 25px;
   padding-bottom: 25px;
 
